using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CacheString : MonoBehaviour
{
    public const string PLAYER_TAG = "Player";
    public const string BOT_TAG = "Enemy";
    public const string IS_ATTACK_STRING = "IsAttack";
    public const string IS_IDLE_STRING = "IsIdle";
    public const string IS_DEAD_STRING = "IsDead";
    public const string DEFAULT_LAYER = "Default";
    public const string CHARACTER_LAYER = "Character";

    //Anim String
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";
}
