using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CacheString : MonoBehaviour
{
    //Anim String
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";

    //Tag String
    public const string BULLET_TAG = "Bullet";
    public const string BOT_TAG = "Enemy";
    public const string PLAYER_TAG = "Player";

    //Layer Strig
    public const string CHARACTER_LAYER = "Character";

    //Data Key
    public const string PLAYER_DATA_KEY = "PlayerDataKey";

}
